Add code to create the final dataframe

--- a/Data processing.ipynb
+++ b/Data processing.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,38 +156,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Population datasets\n",
-    "peru_population = pd.read_csv(\"Population_data/iquitos_population_data.csv\")"
+    "population = population.rename({\"Year\": 'year', \"Estimated_population\": \"population\"}, axis = 1)\n",
+    "final_df = dengue.merge(population, on = 'year', how='left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combine `environment_data` with `final_df`\n",
+    "\n",
+    "The next step in the processing of data before we do any analysis is to refine the data about the environment with the final data frame we created till now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I begin by removing all rows that have atleast one missing value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "peru_population = peru_population.rename({\"Year\": 'year', \"Estimated_population\": \"population\"}, axis = 1)"
+    "environment_refined = environment[(environment[\"TMAX\"] != -9999) & \n",
+    "            (environment[\"TMIN\"] != -9999) & \n",
+    "            (environment[\"TAVG\"] != -9999) &\n",
+    "            (environment[\"TDTR\"] != -9999) & \n",
+    "            (environment[\"PRCP\"] != -9999)].reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, I take the mean values per month per year for temperature data but find the sum per month per year."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dengue_peru_refined = dengue_peru_refined.merge(peru_population, on = 'year', how='left')"
+    "environment_refined = environment_refined.groupby([\"YYYY\", \"MM\"]).agg({\"TMAX\": \"mean\", \n",
+    "                                                 \"TMIN\": \"mean\", \n",
+    "                                                 \"TAVG\": \"mean\", \n",
+    "                                                 \"TDTR\": \"mean\", \n",
+    "                                                 \"PRCP\": \"sum\"}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I rename the columns and create the appropriate date column to be merged with the final data frame."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "environment_refined['MM'] = environment_refined.MM.map(\"{:02}\".format)\n",
+    "environment_refined = environment_refined.rename({\"YYYY\": 'year', \"MM\": \"month\"}, axis = 1)\n",
+    "environment_refined['month'] = environment_refined['month'].astype(str)\n",
+    "environment_refined['year'] = environment_refined['year'].astype(str)\n",
+    "environment_refined['date'] = environment_refined['year'].str.cat(environment_refined['month'], sep = '-')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll add precipitatiom values for the last two months as well as it is likely that the dengue cases may be affected by the rainfall that happened a few days ago."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prcp_1 = np.insert(np.array(environment_refined['PRCP'][:-1]), 0, 0)\n",
+    "prcp_2 = np.insert(prcp_1[:-1], 0, 0)\n",
+    "environment_refined['PRCP(-1)'] = prcp_1\n",
+    "environment_refined['PRCP(-2)'] = prcp_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll combine the data frames into one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = final_df.merge(environment_refined, on = 'date', how='left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll now remove all the columns that are not needed:\n",
+    "- year_x\n",
+    "- month_x\n",
+    "- year_y\n",
+    "- month_y\n",
+    "\n",
+    "I'll also rearrange the columns in a specific order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = final_df.drop(['year_x', 'month_x', 'year_y', 'month_y'], axis = 1)\n",
+    "final_df = final_df[['date', 'population', 'TMAX', 'TMIN', 'TAVG', 'TDTR', 'PRCP(-1)', \n",
+    "                     'PRCP(-2)', 'PRCP', 'total_cases']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final view of the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>population</th>\n",
+       "      <th>TMAX</th>\n",
+       "      <th>TMIN</th>\n",
+       "      <th>TAVG</th>\n",
+       "      <th>TDTR</th>\n",
+       "      <th>PRCP(-1)</th>\n",
+       "      <th>PRCP(-2)</th>\n",
+       "      <th>PRCP</th>\n",
+       "      <th>total_cases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000-07</td>\n",
+       "      <td>386666</td>\n",
+       "      <td>31.458333</td>\n",
+       "      <td>20.325000</td>\n",
+       "      <td>25.916667</td>\n",
+       "      <td>11.133333</td>\n",
+       "      <td>85.8</td>\n",
+       "      <td>309.3</td>\n",
+       "      <td>97.3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000-08</td>\n",
+       "      <td>386666</td>\n",
+       "      <td>32.864706</td>\n",
+       "      <td>21.170588</td>\n",
+       "      <td>27.017647</td>\n",
+       "      <td>11.694118</td>\n",
+       "      <td>97.3</td>\n",
+       "      <td>85.8</td>\n",
+       "      <td>225.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-09</td>\n",
+       "      <td>386666</td>\n",
+       "      <td>33.300000</td>\n",
+       "      <td>20.925000</td>\n",
+       "      <td>27.108333</td>\n",
+       "      <td>12.375000</td>\n",
+       "      <td>225.2</td>\n",
+       "      <td>97.3</td>\n",
+       "      <td>247.1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000-10</td>\n",
+       "      <td>386666</td>\n",
+       "      <td>33.163636</td>\n",
+       "      <td>21.709091</td>\n",
+       "      <td>27.436364</td>\n",
+       "      <td>11.454545</td>\n",
+       "      <td>247.1</td>\n",
+       "      <td>225.2</td>\n",
+       "      <td>81.2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000-11</td>\n",
+       "      <td>386666</td>\n",
+       "      <td>33.400000</td>\n",
+       "      <td>21.550000</td>\n",
+       "      <td>27.475000</td>\n",
+       "      <td>11.850000</td>\n",
+       "      <td>81.2</td>\n",
+       "      <td>247.1</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      date  population       TMAX       TMIN       TAVG       TDTR  PRCP(-1)  \\\n",
+       "0  2000-07      386666  31.458333  20.325000  25.916667  11.133333      85.8   \n",
+       "1  2000-08      386666  32.864706  21.170588  27.017647  11.694118      97.3   \n",
+       "2  2000-09      386666  33.300000  20.925000  27.108333  12.375000     225.2   \n",
+       "3  2000-10      386666  33.163636  21.709091  27.436364  11.454545     247.1   \n",
+       "4  2000-11      386666  33.400000  21.550000  27.475000  11.850000      81.2   \n",
+       "\n",
+       "   PRCP(-2)   PRCP  total_cases  \n",
+       "0     309.3   97.3            0  \n",
+       "1      85.8  225.2            0  \n",
+       "2      97.3  247.1            1  \n",
+       "3     225.2   81.2            2  \n",
+       "4     247.1   25.4            0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the data\n",
+    "\n",
+    "Finally, I'll save the created data frame into a file to be used for analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv(\"data/iquitos/combined_data.csv\", index = False)"
+   ]
   }
  ],
  "metadata": {
